crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__dead_code__bindings__cleanup_strict_argument.snap
---
source: crates/nash-codegen/src/optimizer_tests/dead_code.rs
assertion_line: 258
expression: "crate::harness::pass_snapshot(b.arena, before,\nformat!(\"--- core before\\n{}\\n--- core after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(after), candidate.result, candidate.logs))"
---
--- unoptimized Core
let anf#3 : int = trace "kept" in 9 in
(\unused#2 : int -> 42) anf#3
--- unoptimized UPLC
(program 1.1.0
  [(lam anf_3 [(lam unused_2 (con integer 42)) anf_3])
    (force [[(force (builtin trace)) (con string "kept")] (delay (con integer 9))])])
--- optimized Core
let anf#1 : int = trace "kept" in 9 in
42
--- optimized UPLC
(program 1.1.0
  [(lam builtin_3
    [(lam anf_2 (con integer 42))
      (force [[builtin_3 (con string "kept")] (delay (con integer 9))])])
    (force (builtin trace))])
--- isolated pass
--- core before
let anf#3 : int = trace "kept" in 9 in
(\unused#2 : int -> 42) anf#3
--- core after
let anf#3 : int = trace "kept" in 9 in
42
--- result
(con integer 42)
--- logs
["kept"]
