crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__dead_code__bindings__diverging_call.snap
---
source: crates/nash-codegen/src/optimizer_tests/dead_code.rs
assertion_line: 199
expression: "crate::harness::pass_snapshot(b.arena, root,\nformat!(\"--- core before\\n{}\\n--- core after\\n{}\", pretty(root),\npretty(after)))"
---
--- unoptimized Core
letrec
  unused#2 : int -> int [static []] = \unused#1 : int -> unused#2 unused#1
in
let unused#3 : int = unused#2 0 in
42
--- unoptimized UPLC
(program 1.1.0
  [(lam unused_2 [(lam unused_3 (con integer 42)) [unused_2 (con integer 0)]])
    [(lam self_4 [self_4 self_4])
      (lam self_4 (lam unused_1 [[self_4 self_4] unused_1]))]])
--- optimized Core
letrec
  worker#7 : @delay int [static []] = \ -> delay (force worker#7)
in
let unused#6 : int = force worker#7 in
42
--- optimized UPLC
(program 1.1.0
  [(lam worker_4 [(lam unused_5 (con integer 42)) (force worker_4)])
    [(lam self_2 [self_2 self_2]) (lam self_3 (delay (force [self_3 self_3])))]])
--- isolated pass
--- core before
letrec
  unused#2 : int -> int [static []] = \unused#1 : int -> unused#2 unused#1
in
let unused#3 : int = unused#2 0 in
42
--- core after
letrec
  unused#2 : int -> int [static []] = \unused#1 : int -> unused#2 unused#1
in
let unused#3 : int = unused#2 0 in
42
